# forzify

./: README.md
aleksander-theo-strand/: README.md
eirik-eggset/: README.md
eirik-eggset/dribbling-detection-algorithm/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.toml  docker-compose.yaml  entrypoint.sh  update_env.sh
eirik-eggset/dribbling-detection-algorithm/experimentation/: dataset_testing.ipynb
eirik-eggset/dribbling-detection-algorithm/src/: config.rs  lib.rs  main.rs
eirik-eggset/dribbling-detection-algorithm/src/data/: dataset.rs  download_data.rs  mod.rs  models.rs
eirik-eggset/dribbling-detection-algorithm/src/dribbling_detection/: create_dribble_models.rs  dribble_detector.rs  dribble_models.rs  mod.rs
eirik-eggset/dribbling-detection-algorithm/src/utils/: annotation_calculations.rs  annotations.rs  draw_pitch_minimap.rs  image_calculations.rs  keyboard_args.rs  keyboard_input.rs  mod.rs  video_processing.rs  visualizations.rs
evan-jåsund-kassab/: README.md
joel-yacob-teklemariam/: README.md  requirements.txt
mehdi-houshmand-sarkhoosh/: README.md
mohammad-azizul-islam-yasin/: README.md
ole-kristian-rustebakke/: .gitignore  README.md  bounding_box_IoU.py  config_pose.yaml  config_pose_test.yaml  coords_to_pos.py  formatkeypoints.py  funcs.py  plot_keypoint_distribution.py  run_pose.py  speed_extraction.py  speed_extraction_gamestate.py  speed_extraction_pnl_calib.py  train_pose.py  visualize_bounding_boxes.py
robin-rognerud/: README.md  clipVideos.py  imageHandling.py  loadAndPredict.py  logoDetection.py  (+3 more)
(+78 files in other folders)
